# monorepo

./: .gitignore  Jenkinsfile  README.md  ROADMAP.md  docker-compose.yml
Backend/: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.py  config.dev.json  config.example.json
Backend/database/: env.py  pyproject.toml
Backend/database/versions/: 02cac9c9ac86_create_sessions_table.py  29f4e46e02de_create_code_verifier_table.py
Backend/src/: main.cpp
Backend/src/Ai/: AiAssistant.h  Conversation.h  ConversationManager.h  DeepSeekProvider.h  Tool.h  ToolRegistry.h
Backend/src/Ai/Handlers/: ChatRest.h  ChatWebSocket.h
Backend/src/Ai/Tools/: BookAppointment.h  ClientTools.h  QueryRevenue.h  SalonInfo.h
Backend/src/Application/: Bootstrapper.cpp  Bootstrapper.h  Globals.h
Backend/src/Controllers/: Authentication.cpp  Authentication.h  Health.cpp  Health.h
Backend/src/Helpers/: AbstractEncryptor.h  DevEncryptor.cpp  DevEncryptor.h  KeyDeriver.cpp  KeyDeriver.h  Keycloak.cpp  Keycloak.h  SessionCrypto.cpp  SessionCrypto.h
Backend/src/Middleware/: ExceptionMiddleware.h  LogRequestMiddleware.h  SessionMiddleware.h
Backend/src/Models/: CodeVerifiers.cc  CodeVerifiers.h  Sessions.cc  Sessions.h  model.json
Backend/src/Schemas/: AccessTokenResponse.h  Error.h  Health.h
Backend/src/Types/: SecureMasterKey.cpp  SecureMasterKey.h
Docs/: .gitignore  mkdocs.yml  pyproject.toml
Docs/docs/: developer-guide.md  faq.md  index.md
Docs/docs/app/: database.md
Docs/docs/application/: application.md
Docs/docs/architecture/: cluster.md  networking.md  security.md
Docs/docs/cicd/: fleet.md  github-actions.md
Docs/docs/deployment/: docker-compose.md
Docs/docs/js/: mermaid-init.js
Docs/docs/monitoring/: alerts.md  grafana.md  logging.md
Docs/docs/product/: architecture.md  data-model.md  index.md  modules.md  plan.md
Docs/docs/stylesheets/: softblush.css
Docs/docs/tenants/: keda.md  setup.md
Docs/user/: mkdocs.yml
Docs/user/docs/: ai-assistant.md  index.md
Docs/user/docs/pos/: checkout.md  (+3 more)
Kubernetes/: .coveragerc  .gitignore  .sops.yaml  README.md  agent.md  pyproject.toml
Kubernetes/app-of-apps/: Chart.yaml  app-of-apps.yaml  values-prd.yaml  values-tst.yaml
Kubernetes/app-of-apps/templates/: app.yaml
Kubernetes/apps/argocd/: Chart.yaml  argocd-secret.yaml  values-acc.yaml  values-tst.yaml
Kubernetes/apps/cloudflare/: values-tst.yaml
Kubernetes/apps/database-system/: Chart.yaml  values-tst.yaml
Kubernetes/apps/external-secrets/: Chart.yaml  cluster-secrets-store.yaml
Kubernetes/apps/keycloak/: Chart.yaml  values-tst.yaml
Kubernetes/apps/kubernetes-dashboard/: Chart.yaml  values-tst.yaml
Kubernetes/apps/monitoring/: Chart.yaml  values-tst.yaml
Kubernetes/apps/vault/: Chart.yaml  values-tst.yaml
Kubernetes/apps/website/: Chart.yaml  values-tst.yaml  values.yaml
Kubernetes/docs/: coverage-report.md
Kubernetes/stylist/: .env.sample  README.md  __init__.py  main.py  secret.db
Kubernetes/stylist/commands/: __init__.py  database.py  proxy.py
Kubernetes/stylist/console/: __init__.py  credential_details.py  credentials_list.py  credentials_overview.py  database_editor.py  database_editor.tcss  horizontal_layout.tcss  main_window.py  main_window_reset.py  task_details.py  task_list.py  task_log.py
Kubernetes/stylist/core/: __init__.py  backbone.py  context.py  log_recorder.py  task_orchestrator.py  task_runner.py
Kubernetes/stylist/enums/: __init__.py  environment.py  task_status.py
Kubernetes/stylist/helpers/: __init__.py  argocd.py  cluster.py  console.py  database.py  helm.py  kubeconfig.py  remote_db.py  vault.py
Kubernetes/stylist/models/: __init__.py  argocd_app.py  credential.py  helm_repository.py  task.py  vault_keys.py  vault_secret.py
Kubernetes/stylist/tasks/: __init__.py
Kubernetes/stylist/tests/: conftest.py  test_cli.py  test_commands_vault.py  test_database.py  test_helpers_cluster_crds.py  test_helpers_database.py  test_helpers_helm.py  test_helpers_kubeconfig.py  test_helpers_remote_db.py  test_models_task.py  test_models_vault_keys.py  test_models_vault_secret.py  test_remote_db.py  test_tasks_cluster_clear_custom_resources.py  test_tasks_cluster_set_environment.py  test_tasks_prerequisites_check_cluster_connection.py  test_utils.py  test_vault.py
(+175 files in other folders)
