[project]
name = "database"
version = "0.1.0"
description = ""
authors = [
    {name = "Benjamin Martens",email = "bmartens@pm.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic (>=1.16.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "database", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
